--- a/docs/pages/components/radio.mdx
+++ b/docs/pages/components/radio.mdx
@@ -1,16 +1,286 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
-import { Radio } from "@nice-digital/nds-radio";
+import { Example } from "components/examples/Example";
+import { DefaultRadio, DefaultRadioExample, InlineRadio, HintRadio, ErrorRadio, ErrorHintRadio, DisabledRadio } from "components/examples/Radio";
 
 export const meta = {
 	title: "Radio",
+	description: "Use the radio component when users can only select one option from a list.",
 	npmUrl: "https://www.npmjs.com/package/@nice-digital/nds-radio",
-	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-radio"
+	gitHubUrl: "https://github.com/nice-digital/nice-design-system/blob/main/components/nds-radio",
+	component: DefaultRadio
 };
 
-# {meta.title}
+Radio buttons are a common way to allow users to make a single selection from a list of options. Since only one radio button can be selected at a time (within the same group), each available choice must be its own item and label.
 
-*** Placeholder component page ***
+## When to use
 
-<Radio value="yes" />
+Use the radios component when users can only select one option from a list.
+
+## When not to use
+
+If users need to be able to pick more than one option from a list, use the checkboxes component instead.
+
+## How to use
+
+Always position radios to the left of their labels. This makes them easier to find, especially for users of screen magnifiers.
+
+Unlike with checkboxes, users can only select one option from a list of radios. Do not assume that users will know how many options they can select based on the visual difference between radios and checkboxes alone.
+
+If needed, add a hint explaining this, for example, 'Select one option'.
+
+Do not pre-select radio options as this makes it more likely that users will:
+
+-   not realise they've missed a question
+-   submit the wrong answer
+
+
+Order radio options alphabetically by default.
+
+Group radios together in a `fieldset` with a `legend` that describes them, as shown in the examples on this page. This is usually a question, like 'Where do you live?'
+
+### If you're asking one question on the page
+
+If you are asking just [one question per page](https://design-system.service.gov.uk/patterns/question-pages/#start-by-asking-one-question-per-page) as recommended, you can set the contents of the `<legend>` as the page heading. This is good practice as it means that users of screen readers will only hear the contents once.
+
+Read more on the [gov.uk](http://gov.uk) Design System about [why and how to set legends as headings](https://design-system.service.gov.uk/get-started/labels-legends-headings/).
+
+## Default radios
+
+<Example>
+<DefaultRadioExample />
+
+<CH.Code>
+```js React
+<>
+	<Radio label="Yes" value="Yes" name="defaultradioexample" />
+	<Radio label="No" value="No" name="defaultradioexample" />
+</>
+	```
+```html HTML
+<div class="radio" data-component="radio">
+  <input
+    class="radio__input"
+    name="defaultradioexample"
+    type="radio"
+    id="defaultradioexample_Yes"
+  /><label class="radio__label" for="defaultradioexample_Yes">Yes</label>
+</div>
+<div class="radio" data-component="radio">
+  <input
+    class="radio__input"
+    name="defaultradioexample"
+    type="radio"
+    id="defaultradioexample_No"
+  /><label class="radio__label" for="defaultradioexample_No">No</label>
+</div>
+```
+</CH.Code>
+</Example>
+
+## Inline radios
+
+In some cases, you can display radios 'inline' beside one another (horizontally).
+
+Only use inline radios when:
+
+-   the question only has two options
+-   both options are short
+
+Remember that on small screens such as mobile devices, the radios will still be 'stacked' on top of one another (vertically).
+
+<Example>
+<InlineRadio />
+
+<CH.Code>
+```js React
+<>
+	<Radio inline label="Yes" value="Yes" name="inlineradio" />
+	<Radio inline label="No" value="No" name="inlineradio" />
+</>
+	```
+```html HTML
+<div class="radio radio--inline" data-component="radio--inline">
+  <input
+    class="radio__input"
+    name="inlineradio"
+    type="radio"
+    id="inlineradio_Yes"
+  /><label class="radio__label" for="inlineradio_Yes">Yes</label>
+</div>
+<div class="radio radio--inline" data-component="radio--inline">
+  <input
+    class="radio__input"
+    name="inlineradio"
+    type="radio"
+    id="inlineradio_No"
+  /><label class="radio__label" for="inlineradio_No">No</label>
+</div>
+```
+</CH.Code>
+</Example>
+
+## Radios with hints
+
+You can add hints to radio items to provide additional information about the options.
+
+<Example>
+<HintRadio />
+
+<CH.Code>
+```js React
+<>
+	<Radio
+		hint="Some helpful hint text"
+		label="Yes"
+		value="Yes"
+		name="hintradio"
+	/>
+	<Radio label="No" value="No" name="hintradio" />
+</>
+	```
+```html HTML
+<div class="radio" data-component="radio">
+  <input
+    class="radio__input"
+    name="hintradio"
+    type="radio"
+    id="hintradio_Yes"
+  /><label class="radio__label" for="hintradio_Yes">Yes</label
+  ><span class="checkbox__hint">Some helpful hint text</span>
+</div>
+<div class="radio" data-component="radio">
+  <input
+    class="radio__input"
+    name="hintradio"
+    type="radio"
+    id="hintradio_No"
+  /><label class="radio__label" for="hintradio_No">No</label>
+</div>
+```
+</CH.Code>
+</Example>
+
+## Errors
+
+<Example>
+<ErrorRadio />
+
+<CH.Code>
+```js React
+<>
+	<Radio error={true} label="Yes" value="Yes" name="errorradio" />
+	<Radio label="No" value="No" name="errorradio" />
+</>
+```
+```html HTML
+<div class="radio radio--error" data-component="radio">
+  <input
+    class="radio__input"
+    name="errorradio"
+    type="radio"
+    id="errorradio_Yes"
+  /><label class="radio__label" for="errorradio_Yes">Yes</label>
+</div>
+<div class="radio" data-component="radio">
+  <input
+    class="radio__input"
+    name="errorradio"
+    type="radio"
+    id="errorradio_No"
+  /><label class="radio__label" for="errorradio_No">No</label>
+</div>
+```
+</CH.Code>
+</Example>
+
+### Error with message
+
+<Example>
+<ErrorHintRadio />
+
+<CH.Code>
+```js React
+<>
+	<Radio
+		error="Error message"
+		label="Yes"
+		value="Yes"
+		name="errorhintradio"
+	/>
+	<Radio label="No" value="No" name="errorhintradio" />
+</>
+```
+```html HTML
+<p class="radio__error-message">Error message</p>
+<div class="radio radio--error" data-component="radio">
+  <input
+    class="radio__input"
+    name="errorhintradio"
+    type="radio"
+    id="errorhintradio_Yes"
+  /><label class="radio__label" for="errorhintradio_Yes">Yes</label>
+</div>
+<div class="radio" data-component="radio">
+  <input
+    class="radio__input"
+    name="errorhintradio"
+    type="radio"
+    id="errorhintradio_No"
+  /><label class="radio__label" for="errorhintradio_No">No</label>
+</div>
+```
+</CH.Code>
+</Example>
+
+## Disabled radios
+
+Disabled radio inputs can be used to indicate inputs that are no longer valid or expired.
+
+<Example>
+<DisabledRadio />
+
+<CH.Code>
+```js React
+<>
+	<Radio disabled label="Yes" value="Yes" name="disabledradio" />
+	<Radio disabled label="No" value="No" name="disabledradio" />
+</>
+```
+```html HTML
+<div class="radio" data-component="radio">
+  <input
+    disabled=""
+    class="radio__input"
+    name="disabledradio"
+    type="radio"
+    id="disabledradio_Yes"
+  /><label class="radio__label" for="disabledradio_Yes">Yes</label>
+</div>
+<div class="radio" data-component="radio">
+  <input
+    disabled=""
+    class="radio__input"
+    name="disabledradio"
+    type="radio"
+    id="disabledradio_No"
+  /><label class="radio__label" for="disabledradio_No">No</label>
+</div>
+```
+</CH.Code>
+</Example>
+
+## Accessibility
+
+We use a custom style for radio buttons, so they're more prominent and easier to use than the standard radio buttons defined by the user's browser. We also use a custom style to clarify their focused and selected states.
+
+Component meets WCAG AA guidelines for accessibility on:
+
+- Text contrast - Text has a contrast ratio of at least 4.5:1 for small text and at least 3:1 for large text (WCAG 2.0 )1.4.3).
+- UI contrast - Visual information required to identify components and states (except inactive components) has a contrast ratio of at least 3:1 (WCAG 2.1 1.4.11).
+- Accessible use of colour - Colour is not used as the only visual means of conveying information (WCAG 2.0 1.4.1).
+
+## Research/evidence
+
+We tested the radio component on a "In consultation Comment Collection" prototype in 2021. Users understood the purpose of the radios and were able to use them.
 
 export default ({ children }) => <ComponentLayout meta={meta}>{children}</ComponentLayout>;
