--- a/docs/pages/components/action-banner.mdx
+++ b/docs/pages/components/action-banner.mdx
@@ -25,7 +25,7 @@ Don't use for large blocks of content. An action banner is designed as a short i
 
 An example of the banner to call attention to registering as a stakeholder. There is a short heading and just one sentence of supporting text.
 
-If you need to highlight or emphasise larger blocks of content use the panel component [link to Panel].
+If you need to highlight or emphasise larger blocks of content use the [panel component](/components/panel).
 
 For warning, error or caution messages use the [alert component](/components/alert).
 
@@ -35,7 +35,7 @@ Use sparingly, with a maximum of 1 per page.
 
 Don't use within a container component. Action banners fill the available horizontal space and have their own built-in container. They usually live outside of any .container to fill the screen width.
 
-The action should be a button: choose the right type of button (primary, secondary etc) to match the call to action importance. Follow the rules for buttons [link to buttons].
+The action should be a button: choose the right type of button (primary, secondary etc) to match the call to action importance. Follow the rules for [buttons](/components/button).
 
 ### Default action banner
 
