--- a/docs/pages/components/alphabet.mdx
+++ b/docs/pages/components/alphabet.mdx
@@ -28,7 +28,7 @@ We currently use the A to Z pattern in these areas of the NICE website:
 
 The alphabet component is used:
 
-- at the top of A to Z list pages [link to pattern]. These pages present a number of links in an alphabetical list so users can find and navigate to the content they need.
+- at the top of [A to Z list](/components/a-z-list) pages. These pages present a number of links in an alphabetical list so users can find and navigate to the content they need.
 - as a way of navigating into A to Z list pages from elsewhere, for example on the [BNF homepage](https://bnf.nice.org.uk/).
 
 
