--- a/docs/pages/components/full-bleed.mdx
+++ b/docs/pages/components/full-bleed.mdx
@@ -53,7 +53,7 @@ The basic settings make the Div span the full page width:
 
 ### Centre content inside
 
-Use with a container [link to container docs] element to ensure that any content inside the full bleed component aligns with other content on the page.
+Use with a [container element](/components/container) to ensure that any content inside the full bleed component aligns with other content on the page.
 
 The container adds side margin that centres the content:
 
