NDS-377 Add stacked nav image

--- a/docs/pages/components/stacked-nav.mdx
+++ b/docs/pages/components/stacked-nav.mdx
@@ -1,7 +1,7 @@
 import { ComponentLayout } from "components/layouts/ComponentLayout";
 import { Example } from "components/examples/Example";
 import { DefaultStackedNav } from "components/examples/StackedNav";
-
+import { Screenshot } from "components/core/Screenshot/Screenshot";
 
 export const meta = {
 	title: "Stacked nav",
@@ -98,7 +98,7 @@ Stacked nav expands to fill the available space, so usually wrap in a grid.
 
 The menu supports an additional level of navigation underneath the pages in the menu. The second level navigation is indented to show it sits underneath a page:
 
-Example of stacked navigation on CKS with additional level of navigation on the Diagnosis section.
+<Screenshot image="stacked-nav-1.png" alt="Screenshot of the stacked nav component in use on CKS" caption="Example of stacked navigation on CKS with additional level of navigation on the Diagnosis section." />
 
 ## Accessibility
 
